# hyva-kartta

./: .env  .gitignore  Cargo.toml  README.md  eframe_template.js  eframe_template_bg.wasm  index.html
assets/: sw.js
crates/app/: Cargo.toml  README.md  index.html
crates/app/assets/: manifest.json  sw.js
crates/app/src/: app.rs  db.rs  lib.rs  main.rs
crates/baran/: .gitignore  8608996c7ffffff.zan  86110606fffffff.zan  861f1d497ffffff.zan  Cargo.toml  init.sql
crates/baran/src/: main.rs  server.rs
crates/zana/: Cargo.toml  README.md  init.sql
crates/zana/src/: coords.rs  lib.rs  main.rs
docs/: hyva kartta.excalidraw
src/: app.rs  lib.rs  main.rs  zana.rs
