[package]
name = "eframe_template"
version = "0.1.0"
authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
edition = "2021"
rust-version = "1.65"


[dependencies]
log = "0.4"
zana = {path="../zana"}

# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }
osmpbfreader = "0.16.0"
idb = "0.4.1"
wasm-bindgen-futures = "0.4.37"
yew = { version = "0.20.0", features = ["csr"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
