[package]
name = "eframe_template"
version = "0.1.0"
authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>", "Filipp Samoilov <samoylovfp@gmail.com>"]
edition = "2021"

[dependencies]
log = "0.4"
zana = {path="../zana"}

idb = "0.4.1"
wasm-bindgen-futures = "0.4.37"
yew = { version = "0.20.0", features = ["csr"] }
gloo = { version = "0.9.0", features = ["utils", "net"] }

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
