[package]
name = "hyka"
version = "0.1.0"
authors = ["Filipp Samoilov <samoylovfp@gmail.com>"]
edition = "2021"

[dependencies]
log = "0.4"
zana = { path = "../zana" }

idb = "0.4.1"
wasm-bindgen-futures = "0.4.37"
yew = { version = "0.20.0", features = ["csr"] }
gloo = { version = "0.9.0", features = ["utils", "net", "storage"] }
wasm-logger = "0.2.0"
wasm-bindgen = "0.2.87"
base64 = "0.21.2"
tiny-skia = "0.11.1"
itertools = "0.11.0"
serde = { version = "1.0.183", features = ["derive"] }
instant = { version = "0.1.12", features = ["wasm-bindgen"] }

[dependencies.web-sys]
version = "0.3.64"
features = [
    "CustomEvent",
    "Geolocation",
    "ImageBitmap",
    "ImageData",
    "Navigator",
    "PositionOptions",
    "Window",
]
