[package]
name = "baran"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clickhouse = "0.11.5"
tokio = { version = "1.29.1", features = ["rt-multi-thread"] }
osmpbfreader = "0.16.0"
zana = {path="../zana"}
itertools = "0.11.0"
serde = { version = "1.0.183", features = ["derive"] }
delta-encoding = "0.4.0"
lz4_flex = "0.11.1"
bincode = "1.3.3"
