[package]
name = "baran"
version = "0.1.0"
edition = "2021"

[dependencies]
clickhouse = "0.11.5"
tokio = { version = "1.29.1", features = ["rt-multi-thread"] }
osmpbfreader = "0.16.0"
zana = {path="../zana"}
itertools = "0.11.0"
serde = { version = "1.0.183", features = ["derive"] }
delta-encoding = "0.4.0"
lz4_flex = "0.11.1"
bincode = "1.3.3"
tiny_http = "0.12.0"
serde_json = "1.0.104"
anyhow = "1.0.72"
env_logger = "0.10.0"
