[package]
name = "zana"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
d3_geo_rs = "2.0.2"
delta-encoding = "0.4.0"
geo-types = "0.7.11"
h3o = { version = "0.3.4", features = ["serde"] }
itertools = "0.11.0"
osmpbfreader = "0.16.0"
serde = { version = "1.0.180", features = ["derive"] }
tiny-skia = "0.11.1"
